--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,1 +1,20 @@
-format = "$directory$git_branch$character"
+format = """
+[](mauve)\
+$directory\
+$git_branch\
+$character
+"""
+
+[directory]
+style = "bg:mauve fg:base"
+format = "[  $path ]($style)[](fg:mauve bg:peach)"
+
+[git_branch]
+symbol = ""
+style = "bg:peach fg:base"
+format = "[ $symbol $branch ]($style)[](fg:peach bg:green)"
+
+[character]
+success_symbol = "[](fg:green) [➜](bold green)"
+error_symbol = "[](fg:red) [✗](bold red)"
+
