--- a/.config/.tmux.conf
+++ b/.config/.tmux.conf
@@ -1,37 +1,29 @@
-# --- Prefix key (change from default Ctrl-b to Ctrl-a like GNU Screen) ---
-unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+# --- Mouse + scroll + copy mode ---
+set -g mouse on
+set-window-option -g xterm-keys on
 
-# --- Enable mouse support (scrolling, pane resize, window select) ---
-set-option -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
+bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
+bind -T copy-mode-vi C-WheelUpPane send-keys -X halfpage-up
+bind -T copy-mode-vi C-WheelDownPane send-keys -X halfpage-down
+bind -T copy-mode-emacs C-WheelUpPane send-keys -X halfpage-up
+bind -T copy-mode-emacs C-WheelDownPane send-keys -X halfpage-down
 
-# --- Easier split pane shortcuts ---
-bind | split-window -h
-bind - split-window -v
-unbind '"'
-unbind %
+# --- Clipboard copy (requires xclip) ---
+setw -g mode-keys vi
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -selection c"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X c
 
-# --- Reload config file ---
-bind r source-file ~/.tmux.conf \; display "Config reloaded"
+# --- Terminal and colors ---
+set -g default-terminal "xterm-256color"
+set -g history-limit 10000
 
-# --- Status bar appearance ---
-set-option -g status-bg colour235
-set-option -g status-fg white
-set-option -g status-interval 5
-set-option -g status-left-length 30
-set-option -g status-right-length 90
-set-option -g status-left "#[fg=green]#H"
-set-option -g status-right "#[fg=yellow]%Y-%m-%d #[fg=cyan]%H:%M"
-
-# --- Pane navigation with vim-like keys ---
+# --- Vim-like pane movement ---
 bind -n C-h select-pane -L
 bind -n C-j select-pane -D
 bind -n C-k select-pane -U
-bind -n C-l select-pane -R
 
-# --- Scrollback buffer size ---
-set-option -g history-limit 10000
-
-# --- Enable 256 color support ---
-set-option -g default-terminal "screen-256color"
+# --- Reload config easily ---
+bind r source-file ~/.tmux.conf \; display "Config reloaded"
